kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudpilot-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cloudpilot-api

  template:
    metadata:
      labels:
        app: cloudpilot-api

    spec:
      containers:
        - name: cloudpilot-api
          image: cloudpilot-api:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 15
            periodSeconds: 20
