kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudpilot-api-service

spec:
  selector:
    app: cloudpilot-api

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: NodePort
