kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudpilot-ingress

spec:
  rules:
    - host: cloudpilot.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: cloudpilot-api-service

                port:
                  number: 8000
